--- a/index.html
+++ b/index.html
@@ -384,19 +384,19 @@
 
             <!--==================== QUALIFICATION ====================-->
             <section class="qualification section">
-                <h2 class="section__title">Qualificação</h2>
-                <span class="section__subtitle">Minha jornada pessoal</span>
+                <h2 class="section__title">Qualification</h2>
+                <span class="section__subtitle">My personal journey</span>
 
                 <div class="qualification__container container">
                     <div class="qualification__tabs">
                         <div class="qualification__button button--flex qualification__active" data-target="#education">
                             <i class="uil uil-graduation-cap qualification__icon"></i>
-                            Educação
+                            Education
                         </div>
 
                         <div class="qualification__button button--flex" data-target="#work">
                             <i class="uil uil-briefcase-alt qualification__icon"></i>
-                            Carreira 
+                            Career 
                         </div>
                     </div>
 
@@ -538,8 +538,8 @@
 
             <!--==================== SERVICES ====================-->
             <section class="services section" id="services">
-                <h2 class="section__title">Serviços</h2>
-                <span class="section__subtitle">Onde posso atuar</span>
+                <h2 class="section__title">Services</h2>
+                <span class="section__subtitle">Projects I can make</span>
 
                 <div class="services__container container grid">
                     <!--==================== SERVICES 1 ====================-->
@@ -673,7 +673,7 @@
                             <img src="./assets/img/portfolio1.jpg" alt="" class="portfolio__img">
 
                             <div class="portfolio__data">
-                                <h3 class="portfolio__title">Website Responsivo</h3>
+                                <h3 class="portfolio__title">Project 1</h3>
                                 <p class="portfolio__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, officiis?</p>
                                 <a href="" class="button button--flex button--small portfolio__button">
                                     Demo
@@ -687,7 +687,7 @@
                             <img src="./assets/img/portfolio2.jpg" alt="" class="portfolio__img">
 
                             <div class="portfolio__data">
-                                <h3 class="portfolio__title">Design de Marca</h3>
+                                <h3 class="portfolio__title">Project 2</h3>
                                 <p class="portfolio__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, minus.</p>
                                 <a href="" class="button button--flex button--small portfolio__button">
                                     Demo
@@ -701,7 +701,7 @@
                             <img src="./assets/img/portfolio3.jpg" alt="" class="portfolio__img">
 
                             <div class="portfolio__data">
-                                <h3 class="portfolio__title">Loja Online</h3>
+                                <h3 class="portfolio__title">Project 3</h3>
                                 <p class="portfolio__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis, qui.</p>
                                 <a href="" class="button button--flex button--small portfolio__button">
                                     Demo
@@ -729,10 +729,10 @@
                 <div class="project__bg">
                     <div class="project__container container grid">
                         <div class="project__data">
-                            <h2 class="project__title">Você tem uma ideia de projeto?</h2>
-                            <p class="project__description">Vamos conversar e garanta 30% de desconto no seu novo projeto.</p>
+                            <h2 class="project__title">Do you have a project idea?</h2>
+                            <p class="project__description">Let's build something Awesome !</p>
                             <a href="#contact" class="button button--flex button--white project__button">
-                                Vamos conversar
+                                Let's talk
                                 <i class="uil uil-message project__icon button__icon"></i>
                             </a>
                         </div>
@@ -745,8 +745,8 @@
 
             <!--==================== TESTIMONIAL ====================-->
             <section class="testimonial section">
-                <h2 class="section__title">Depoimentos</h2>
-                <span class="section__subtitle">O que outros clientes disseram</span>
+                <h2 class="section__title">Depositions</h2>
+                <span class="section__subtitle">What people say</span>
 
                 <div class="testimonial__container container swiper-container">
                     <div class="swiper-wrapper">
@@ -827,7 +827,7 @@
                     <div class="swiper-pagination swiper-pagination-testimonial"></div>
                 </div>
             </section>
-
+    
             <!--==================== CONTACT ME ====================-->
             <section class="contact section" id="contact">
                 <h2 class="section__title">Contato</h2>
@@ -839,8 +839,9 @@
                             <i class="uil uil-phone contact__icon"></i>
 
                             <div>
-                                <h3 class="contact__title">Meu númnero</h3>
-                                <span class="contact__subtitle">999-777-666</span>
+                                <h3 class="contact__title">Phone numbers:</h3>
+                                <span class="contact__subtitle">+91 96071 05448</span><br>
+                                <span class="contact__subtitle">+91 93253 97586</span>
                             </div>
                         </div>
 
@@ -848,25 +849,25 @@
                             <i class="uil uil-envelope contact__icon"></i>
 
                             <div>
-                                <h3 class="contact__title">Meu email</h3>
-                                <span class="contact__subtitle">alexa@hotmail.com</span>
+                                <h3 class="contact__title">Email:</h3>
+                                <span class="contact__subtitle">atharva.n.gundawar@gmail.com</span>
                             </div>
                         </div>
 
-                        <div class="contact__information">
+                        <!-- <div class="contact__information">
                             <i class="uil uil-map-marker contact__icon"></i>
 
                             <div>
                                 <h3 class="contact__title">Onde estou</h3>
                                 <span class="contact__subtitle">Brazil - São Paulo - Av Bolivar #123</span>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                     <form action="" class="contact__form grid">
                         <div class="contact__inputs grid">
                             <div class="contact__content">
-                                <label for="contact-name" class="contact__label">Nome</label>
+                                <label for="contact-name" class="contact__label">Name</label>
                                 <input type="text" class="contact__input" id="contact-name">
                             </div>
 
@@ -876,18 +877,18 @@
                             </div>
                         </div>
                         <div class="contact__content">
-                            <label for="contact-project" class="contact__label">Projeto</label>
+                            <label for="contact-project" class="contact__label">Subject</label>
                             <input type="text" class="contact__input" id="contact-project">
                         </div>
 
                         <div class="contact__content">
-                            <label for="contact-message" class="contact__label">Mensagem</label>
-                            <textarea name="" id="" cols="0" rows="7" class="contact__input" id="contact-message"></textarea>
+                            <label for="contact-message" class="contact__label">Message</label>
+                            <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
                         </div>
 
                         <div>
                             <a href="#" class="button button--flex">
-                                Enviar mensagem
+                                Send Message
                                 <i class="uil uil-message button__icon"></i>
                             </a>
                         </div>
