--- a/index.html
+++ b/index.html
@@ -61,13 +61,19 @@
                 </div>
 
                 <div class="nav__btns">
-                    <!-- Botao para mudar o tema -->
                     <i class="uil uil-moon change-theme" id="theme-button"></i>
 
                     <div class="nav__toggle" id="nav-toggle">
                         <i class="uil uil-apps"></i>
                     </div>
                 </div>
+                <!-- <div class="nav__btns">
+                    <i class="uil uil-sun change-theme" id="theme-button"></i>
+
+                    <div class="nav__toggle" id="nav-toggle">
+                        <i class="uil uil-apps"></i>
+                    </div>
+                </div> -->
             </nav>
         </header>
 
