Fix : basic fixes

--- a/index.html
+++ b/index.html
@@ -836,8 +836,8 @@
     
             <!--==================== CONTACT ME ====================-->
             <section class="contact section" id="contact">
-                <h2 class="section__title">Contato</h2>
-                <span class="section__subtitle">Algum pedido ou sugestão?</span>
+                <h2 class="section__title">Contact</h2>
+                <span class="section__subtitle">Any requests or suggestions?</span>
 
                 <div class="contact__container container grid">
                     <div>
@@ -846,8 +846,8 @@
 
                             <div>
                                 <h3 class="contact__title">Phone numbers:</h3>
-                                <span class="contact__subtitle">+91 96071 05448</span><br>
-                                <span class="contact__subtitle">+91 93253 97586</span>
+                                <a class="contact__subtitle" href="tel:+919607105448">+91 96071 05448</a><br>
+                                <a class="contact__subtitle" href="tel:+919325397586">+91 93253 97586</a>
                             </div>
                         </div>
 
@@ -856,7 +856,7 @@
 
                             <div>
                                 <h3 class="contact__title">Email:</h3>
-                                <span class="contact__subtitle">atharva.n.gundawar@gmail.com</span>
+                                <a class="contact__subtitle" href="mailto:atharva.n.gundawar@gmail.com">atharva.n.gundawar@gmail.com</a>
                             </div>
                         </div>
 
