--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
         <!--==================== UNICONS ====================-->
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+        <script src="https://kit.fontawesome.com/e3a7b52a68.js" crossorigin="anonymous"></script>
         
         <!--==================== SWIPER CSS ====================-->
         <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css">
@@ -84,14 +85,17 @@
                 <div class="home__container container grid">
                     <div class="home__content grid">
                         <div class="home__social">
+                            <a href="https://github.com/atharva-Gundawar/" target="blank" class="home__social-icon">
+                                <i class="uil uil-github-alt"></i>
+                            </a>
                             <a href="https://www.linkedin.com/in/atharva-gundawar/" target="blank" class="home__social-icon">
                                 <i class="uil uil-linkedin-alt"></i>
                             </a>
-                            <a href="https://www.kaggle.com/atharvagundawar" target="blank" class="home__social-icon">
-                                <i class="uil uil-dribbble"></i>
+                            <a href="https://stackoverflow.com/users/13105973/atharva-gundawar" target="blank" class="home__social-icon">
+                                <i class="fab fa-stack-overflow"></i>
                             </a>
-                            <a href="https://github.com/atharva-Gundawar/" target="blank" class="home__social-icon">
-                                <i class="uil uil-github-alt"></i>
+                            <a href="https://www.kaggle.com/atharvagundawar" target="blank" class="home__social-icon">
+                                <i class="fab fa-kaggle"></i>
                             </a>
                         </div>
 
@@ -940,8 +944,7 @@
                         </a>
                     </div>
                 </div>
-
-                <p class="footer__copy">&#169; Vinicius Queiroz. Todos os direitos reservados</p>
+                <p class="footer__copy">&#169; Atharva Gundawar. All rights reserved</p>
             </div>
             
         </footer>
