--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 
         <!--==================== UNICONS ====================-->
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+
+        <!--==================== FONTAWESOME ====================-->
         <script src="https://kit.fontawesome.com/e3a7b52a68.js" crossorigin="anonymous"></script>
+
+        <!--==================== SWUP ====================-->
+        <script defer src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>  
         
         <!--==================== SWIPER CSS ====================-->
         <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css">
