--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="./assets/css/styles.css">
 
         <!--==================== OUTROS ====================-->
-        <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
+        <link rel="shortcut icon" href="./assets/img/website_logo.jpg" type="image/x-icon">
 
         <title>Atharva Gundawar</title>
     </head>
@@ -117,7 +117,8 @@
                                     165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
-                                    <image class="home__blob-img" x='12' y='10' xlink:href="./assets/img/perfil.webp"/>
+                                    <!-- <image class="home__blob-img" x='12' y='-150' height = '550' width = '550' xlink:href="./assets/img/perfil.webp"/> -->
+                                    <image class="home__blob-img" x='-45' y='-235' height = '650' width = '1050' xlink:href="./assets/img/project3.png"/>
                                 </g>
                             </svg>                            
                         </div>
@@ -148,7 +149,7 @@
                 <span class="section__subtitle">My Introduction</span>
 
                 <div class="about__container container grid">
-                    <img src="./assets/img/about.webp" alt="" class="about__img">
+                    <img src="./assets/img/about.png" alt="" class="about__img">
 
                     <div class="about__data">
                         <p class="about__description"> I specialize in Deep Learning and Data Analytics, along side I have some experience in backend development and AR. I am currently focused on ML-Ops and MERN .</p>
@@ -565,7 +566,7 @@
                         </div>
 
                         <span class="button button--flex button--small button--link services__button">
-                            Saiba mais
+                            Know More
                             <i class="uil uil-arrow-right button__icon"></i>
                         </span>
 
@@ -604,7 +605,7 @@
                         </div>
 
                         <span class="button button--flex button--small button--link services__button">
-                            Saiba mais
+                            Know More
                             <i class="uil uil-arrow-right button__icon"></i>
                         </span>
 
@@ -643,7 +644,7 @@
                         </div>
 
                         <span class="button button--flex button--small button--link services__button">
-                            Saiba mais
+                            Know More
                             <i class="uil uil-arrow-right button__icon"></i>
                         </span>
 
@@ -752,7 +753,8 @@
                             </a>
                         </div>
 
-                        <img src="./assets/img/project.webp" alt="" class="project__img">
+                        <img src="./assets/img/gummy-programming.png" alt="" class="project__img">
+                        <!-- <img src="./assets/img/project.webp" alt="" class="project__img"> -->
                     </div>
                 </div>
 
@@ -949,7 +951,7 @@
                         </a>
                     </div>
                 </div>
-                <p class="footer__copy">&#169; Atharva Gundawar. All rights reserved</p>
+                <p class="footer__copy">&#169; 2021 Atharva Gundawar. All rights reserved</p>
             </div>
             
         </footer>
