--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <div class="home__data">
                             <h1 class="home__title">Hi, I am Atharva</h1>
                             <h3 class="home__subtitle">I am an Artifitial Intlligance Enginner</h3>
-                            <p class="home__description">This is my portfolio website.</p>
+                            <p class="home__description">This is my portfolio website.<br>(A work in progress)</p>
                             <a href="#contact" class="button button--flex">
                                 Let's talk <i class="uil uil-message button__icon"></i>
                             </a>
@@ -193,7 +193,7 @@
 
                                 <div>
                                     <h1 class="skills__title">Deep Learning</h1>
-                                    <span class="skills__subtitle">Expert</span>
+                                    <span class="skills__subtitle">Advanced</span>
                                 </div>
 
                                 <i class="uil uil-angle-down skills__arrow"></i>
@@ -202,7 +202,7 @@
                             <div class="skills__list grid">
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Computer Vision</h3>
+                                        <h3 class="skills__name">Cusom Models and Architectures</h3>
                                         <span class="skills__number">90%</span>
                                     </div>
                                     <div class="skills__bar">
@@ -232,8 +232,8 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Reinforcement Learning</h3>
-                                        <span class="skills__number">50%</span>
+                                        <h3 class="skills__name">Model Pipelining</h3>
+                                        <span class="skills__number">80%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__react"></span>
@@ -248,8 +248,8 @@
                                 <i class="uil uil-server-network skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__title">Desenvolvedor Backend</h1>
-                                    <span class="skills__subtitle">Mais de X anos</span>
+                                    <h1 class="skills__title">Computer Vision</h1>
+                                    <span class="skills__subtitle">Expert</span>
                                 </div>
 
                                 <i class="uil uil-angle-down skills__arrow"></i>
@@ -258,7 +258,7 @@
                             <div class="skills__list grid">
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">PHP</h3>
+                                        <h3 class="skills__name">Tradition Image Processing</h3>
                                         <span class="skills__number">80%</span>
                                     </div>
                                     <div class="skills__bar">
@@ -268,8 +268,8 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Node JS</h3>
-                                        <span class="skills__number">70%</span>
+                                        <h3 class="skills__name">Opencv</h3>
+                                        <span class="skills__number">90%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__node"></span>
@@ -278,7 +278,7 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Firebase</h3>
+                                        <h3 class="skills__name">CNN and complex architectures</h3>
                                         <span class="skills__number">90%</span>
                                     </div>
                                     <div class="skills__bar">
@@ -288,7 +288,7 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Python</h3>
+                                        <h3 class="skills__name">Research work</h3>
                                         <span class="skills__number">55%</span>
                                     </div>
                                     <div class="skills__bar">
@@ -306,8 +306,8 @@
                                 <i class="uil uil-swatchbook skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__title">Design</h1>
-                                    <span class="skills__subtitle">Mais de X anos</span>
+                                    <h1 class="skills__title">Python</h1>
+                                    <span class="skills__subtitle">Expert</span>
                                 </div>
 
                                 <i class="uil uil-angle-down skills__arrow"></i>
@@ -316,7 +316,7 @@
                             <div class="skills__list grid">
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Figma</h3>
+                                        <h3 class="skills__name">Libraries and Modules</h3>
                                         <span class="skills__number">90%</span>
                                     </div>
                                     <div class="skills__bar">
@@ -326,7 +326,7 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Sketch</h3>
+                                        <h3 class="skills__name">Data Analytics</h3>
                                         <span class="skills__number">85%</span>
                                     </div>
                                     <div class="skills__bar">
@@ -336,8 +336,8 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Photoshop</h3>
-                                        <span class="skills__number">85%</span>
+                                        <h3 class="skills__name">Overall Proficiency</h3>
+                                        <span class="skills__number">95%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__photoshop"></span>
@@ -350,11 +350,11 @@
                         <!--==================== SKILL 4 ====================-->
                         <div class="skills__content skills__close">
                             <div class="skills__header">
-                                <i class="uil uil-swatchbook skills__icon"></i>
+                                <i class="uil uil-code-branch skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__title">Design</h1>
-                                    <span class="skills__subtitle">Mais de X anos</span>
+                                    <h1 class="skills__title">Others</h1>
+                                    <!-- <span class="skills__subtitle">Mais de X anos</span> -->
                                 </div>
 
                                 <i class="uil uil-angle-down skills__arrow"></i>
@@ -363,7 +363,7 @@
                             <div class="skills__list grid">
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Figma</h3>
+                                        <h3 class="skills__name">Git</h3>
                                         <span class="skills__number">90%</span>
                                     </div>
                                     <div class="skills__bar">
@@ -373,7 +373,7 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Sketch</h3>
+                                        <h3 class="skills__name">Internet of things</h3>
                                         <span class="skills__number">85%</span>
                                     </div>
                                     <div class="skills__bar">
@@ -383,11 +383,11 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Photoshop</h3>
+                                        <h3 class="skills__name">Backend Development</h3>
                                         <span class="skills__number">85%</span>
                                     </div>
                                     <div class="skills__bar">
-                                        <span class="skills__percentage skills__photoshop"></span>
+                                        <span class="skills__percentage skills__sketch"></span>
                                     </div>
                                 </div>
 
