--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
                         </div>
 
                         <div>
-                            <a href="#" class="button button--flex">
+                            <a href="mailto:atharva.n.gundawar@gmail.com" class="button button--flex">
                                 Send Message
                                 <i class="uil uil-message button__icon"></i>
                             </a>
