--- a/index.html
+++ b/index.html
@@ -422,11 +422,11 @@
                             <!--==================== QUALIFICATION 1 ====================-->
                             <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification__title">Dev Full-Stack</h3>
-                                    <span class="qualification__subtitle">Skillshare - Instituto</span>
+                                    <h3 class="qualification__title">Computer Science B.Tech</h3>
+                                    <span class="qualification__subtitle">Vellore Institue of Technology</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2019 - 2020
+                                        2019 - 2023
                                     </div>
                                 </div>
 
@@ -446,11 +446,11 @@
                                 </div>
 
                                 <div>
-                                    <h3 class="qualification__title">Web Design</h3>
-                                    <span class="qualification__subtitle">Skillshare - Instituto</span>
+                                    <h3 class="qualification__title">Python and Deep learning</h3>
+                                    <span class="qualification__subtitle">Udemy - coursera</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2020- 2020
+                                        2019 - 2019
                                     </div>
                                 </div>
                             </div>
@@ -458,8 +458,8 @@
                             <!--==================== QUALIFICATION 3 ====================-->
                             <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification__title">Dev Frontend</h3>
-                                    <span class="qualification__subtitle">Skillshare - Instituto</span>
+                                    <h3 class="qualification__title">Deep Learning Nano Degree</h3>
+                                    <span class="qualification__subtitle">Udacity</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
                                         2020 - 2020
@@ -482,14 +482,15 @@
                                 </div>
 
                                 <div>
-                                    <h3 class="qualification__title">Dev Full Stack</h3>
-                                    <span class="qualification__subtitle">PROGBR - Institulo</span>
+                                    <h3 class="qualification__title">Advance Deep Learning Techiques</h3>
+                                    <span class="qualification__subtitle">Coursera DeepLearning.ai</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
                                         2021- 2021
                                     </div>
                                 </div>
                             </div>
+                            
 
                         </div>
 
