--- a/index.html
+++ b/index.html
@@ -741,30 +741,30 @@
                         </div> -->
                     </div>
 
-                    <form action="" class="contact__form grid">
+                    <form action="https://formsubmit.co/atharva.n.gundawar@gmail.com" class="contact__form grid" method="post">
                         <div class="contact__inputs grid">
                             <div class="contact__content">
                                 <label for="contact-name" class="contact__label">Name</label>
-                                <input type="text" class="contact__input" id="contact-name">
+                                <input name="name" placeholder="Your name" type="text" class="contact__input" id="contact-name">
                             </div>
 
                             <div class="contact__content">
                                 <label for="contact-email" class="contact__label">Email</label>
-                                <input type="email" class="contact__input" id="contact-email">
+                                <input type="email" class="contact__input" id="contact-email" name="email" placeholder="your.mail@email.com">
                             </div>
                         </div>
                         <div class="contact__content">
                             <label for="contact-project" class="contact__label">Subject</label>
-                            <input type="text" class="contact__input" id="contact-project">
+                            <input name="subject" placeholder="Awesome Project Idea.." type="text" class="contact__input" id="contact-project">
                         </div>
 
                         <div class="contact__content">
                             <label for="contact-message" class="contact__label">Message</label>
-                            <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                            <textarea name="message" placeholder=". . ." id="" cols="0" rows="7" class="contact__input"></textarea>
                         </div>
 
                         <div>
-                            <a href="mailto:atharva.n.gundawar@gmail.com" class="button button--flex">
+                            <a type="submit" class="button button--flex">
                                 Send Message
                                 <i class="uil uil-message button__icon"></i>
                             </a>
