--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
                         <div class="home__data">
                             <h1 class="home__title">Hi, I am Atharva</h1>
-                            <h3 class="home__subtitle">I am an Artifitial Intlligance Enginner</h3>
+                            <h3 class="home__subtitle">I am an Artifitial Intelligence Enginner</h3>
                             <p class="home__description">This is my portfolio website.<br>(A work in progress)</p>
                             <a href="#contact" class="button button--flex">
                                 Let's talk <i class="uil uil-message button__icon"></i>
