--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
             class="text-primary">foundational models</a>
           in
           <a href="https://en.wikipedia.org/wiki/Reinforcement_learning" class="text-primary">reinforcement
-            learning</a> settings.
-          <br />
-          Updating Website... Please visit back in a day or two. Thanks!
+            learning</a> settings to automate robotic tasks.
         </p>
         <ul class="list-inline list-social-icons mb-0">
           <li class="list-inline-item">
@@ -95,14 +93,6 @@
               </span>
             </a>
           </li>
-          <!-- <li class="list-inline-item">
-            <a href="https://labs.engineering.asu.edu/mps-lab/person/atharva-gundawar/">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-flask fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li> -->
           <li class="list-inline-item">
             <a href="https://scholar.google.com/citations?user=OXU-5msAAAAJ&hl=en">
               <span class="fa-stack fa-lg">
@@ -111,6 +101,7 @@
               </span>
             </a>
           </li>
+          
         </ul>
       </div>
     </section>
@@ -121,28 +112,52 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">
-              On the Performance of new Higher Order Transformation Functions
-              for Highly Efficient Dense Layers
-            </h3>
-            <div class="subheading mb-3" style="text-transform: none">
-              Neural Processing Letters
-            </div>
-            <p>
-              Gundawar, A., Lodha, S., Vijayarajan, V., Iyer, B., & Prasath,
-              V. S. (2023). Volume 55, Issue 8, Pages 10655-10668.
-            </p>
+            <h3 class="mb-0">Superior Computer Chess with Model Predictive Control, Reinforcement Learning, and Rollout</h3>
+            <div class="subheading mb-3" style="text-transform: none">A Gundawar, Y Li, D Bertsekas</div>
+            <p><a href="https://arxiv.org/pdf/2409.06477" class="text-primary">arXiv preprint arXiv:2409.06477</a></p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2023</span>
+            <span class="text-primary">2024</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">
-              Enhanced Dense Layers Using a Quadratic Transformation Function
-            </h3>
+            <h3 class="mb-0">Robust Planning with LLM-Modulo Framework: Case Study in Travel Planning</h3>
+            <div class="subheading mb-3" style="text-transform: none">A Gundawar, M Verma, L Guan, K Valmeekam, S Bhambri, ...</div>
+            <p><a href="https://arxiv.org/abs/2405.20625" class="text-primary">arXiv preprint arXiv:2405.20625</a></p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2024</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">LLMs Can't Plan, But Can Help Planning in LLM-Modulo Frameworks</h3>
+            <div class="subheading mb-3" style="text-transform: none">S Kambhampati, K Valmeekam, L Guan, K Stechly, M Verma, S Bhambri, ...</div>
+            <p><a href="https://openreview.net/forum?id=Th8JPEmH4z" class="text-primary">arXiv preprint arXiv:2402.01817</a></p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2024</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">On the Performance of new Higher Order Transformation Functions for Highly Efficient Dense Layers</h3>
+            <div class="subheading mb-3" style="text-transform: none">A Gundawar, S Lodha, V Vijayarajan, B Iyer, VBS Prasath</div>
+            <p>Neural Processing Letters 55 (8), 10655-10668</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2023</span>
+          </div>
+        </div>
+
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Enhanced Dense Layers Using a Quadratic Transformation Function</h3>
             <div class="subheading mb-3" style="text-transform: none">
               International Conference on Big Data Innovation for Sustainable
               Cognitive Computing
@@ -153,7 +168,7 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2022</span>
+            <span class="text-primary">2022</span>
           </div>
         </div>
 
@@ -173,7 +188,7 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">November 2022</span>
+            <span class="text-primary">2022</span>
           </div>
         </div>
       </div>
@@ -182,6 +197,25 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
       <div class="my-auto">
         <h2 class="mb-5">Experience</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Research Assistant</h3>
+            <div class="subheading mb-3">Arizona State University</div>
+            <p>
+              • Improving Reasoning capacities of LLMs through neuro-symbolic frameworks
+            </p>
+            <p>
+              • Leveraging Foundational Models as a general solver for complete information environments
+            </p>
+            <p>
+              • Interactive Uncertainty Reduction for Efficient Vision-Language Spatiotemporal Navigation
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Jan 2024 - Present</span>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
@@ -249,7 +283,7 @@
             <h3 class="mb-0">Software Development Intern</h3>
             <div class="subheading mb-3">ONTRIBE</div>
             <p>
-              • Engineered an analytics system utilizing Graph Neural Networks
+               Engineered an analytics system utilizing Graph Neural Networks
               (GNNs) to evaluate GitHub profiles across multiple
               dimensions—commit frequency, programming languages, contribution
               patterns, and peer reviews—generating a comprehensive profile
@@ -318,26 +352,21 @@
             <h3 class="mb-0">Arizona State University</h3>
             <div class="subheading mb-3">Master of Science</div>
             <div>
-              Robotics and Autonomous Systems - Artificial Intelligence Track
+              Robotics and Autonomous Systems - Artificial Intelligence
             </div>
-            <p>GPA: 3.7</p>
+            <p>GPA: 3.95</p>
             <div class="coursework">
               <h4 class="subheading mb-3">Relevant Coursework</h4>
               <ul>
-                <li>
-                  EEE 549 - Statistical Machine Learning: Theory to Practice
-                </li>
+                <!-- Added courses -->
+                <li>CSE 571 - Artificial Intelligence</li>
+                <li>CSE 574 - Planning/Learning Methods AI</li>
+                <li>EEE 549 - Statistical Machine Learning: Theory to Practice</li>
                 <li>EGR 501 - Applied Linear Algebra</li>
                 <li>EGR 545 - Robotic Systems I</li>
-                <li>
-                  CSE 598 - Special Topics: Machine Learning Accelerator
-                  Design
-                </li>
+                <li>CSE 598 - Special Topics: Machine Learning Accelerator Design</li>
                 <li>CSE 691 - Seminar: Topics in Reinforcement Learning</li>
-                <li>
-                  CSE 598 - Special Topics: Operational Deep Learning: A
-                  Sociotechnic Perspective
-                </li>
+                <li>CSE 598 - Special Topics: Operational Deep Learning: A Sociotechnic Perspective</li>
               </ul>
             </div>
           </div>
