--- a/index.html
+++ b/index.html
@@ -354,13 +354,13 @@
             <div>
               Robotics and Autonomous Systems - Artificial Intelligence
             </div>
-            <p>GPA: 3.95</p>
+            <p>GPA: 4.0</p>
             <div class="coursework">
               <h4 class="subheading mb-3">Relevant Coursework</h4>
               <ul>
                 <!-- Added courses -->
                 <li>CSE 571 - Artificial Intelligence</li>
-                <li>CSE 574 - Planning/Learning Methods AI</li>
+                <li>CSE 574 - Planning/Learning Methods in AI</li>
                 <li>EEE 549 - Statistical Machine Learning: Theory to Practice</li>
                 <li>EGR 501 - Applied Linear Algebra</li>
                 <li>EGR 545 - Robotic Systems I</li>
