--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Arizona State University</h3>
-            <div class="subheading mb-3">Master of Science</div>
+            <div class="subheading mb-3">Master of Science (Fully Funded)</div>
             <div>
               Robotics and Autonomous Systems - Artificial Intelligence
             </div>
